--- a/Project1/EmbeddingLayers.ipynb
+++ b/Project1/EmbeddingLayers.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 432,
+   "execution_count": 182,
    "metadata": {
     "tags": []
    },
@@ -35,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 433,
+   "execution_count": 183,
    "metadata": {
     "tags": []
    },
@@ -43,7 +43,7 @@
     {
      "output_type": "stream",
      "name": "stdout",
-     "text": "{'n', 'b', 'r', 'u', 'o'} {'g', 'l', 'e', 'o'}\n"
+     "text": "{'b', 'o', 'u', 'n', 'r'} {'e', 'g', 'l', 'o'}\n"
     }
    ],
    "source": [
@@ -61,7 +61,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 434,
+   "execution_count": 184,
    "metadata": {
     "tags": []
    },
@@ -69,7 +69,7 @@
     {
      "output_type": "stream",
      "name": "stdout",
-     "text": "['jumped', 'the', 'quick', 'brown', 'over', 'dog', 'lazy', 'fox']\n"
+     "text": "['lazy', 'the', 'quick', 'jumped', 'brown', 'fox', 'over', 'dog']\n"
     }
    ],
    "source": [
@@ -79,7 +79,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 435,
+   "execution_count": 185,
    "metadata": {
     "tags": []
    },
@@ -105,7 +105,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 436,
+   "execution_count": 186,
    "metadata": {
     "tags": []
    },
@@ -113,7 +113,7 @@
     {
      "output_type": "stream",
      "name": "stdout",
-     "text": "{'jumped': 0, 'the': 1, 'quick': 2, 'brown': 3, 'over': 4, 'dog': 5, 'lazy': 6, 'fox': 7}\n"
+     "text": "{'lazy': 0, 'the': 1, 'quick': 2, 'jumped': 3, 'brown': 4, 'fox': 5, 'over': 6, 'dog': 7}\n"
     }
    ],
    "source": [
@@ -124,7 +124,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 437,
+   "execution_count": 187,
    "metadata": {
     "tags": []
    },
@@ -132,7 +132,7 @@
     {
      "output_type": "stream",
      "name": "stdout",
-     "text": "tensor([0, 1, 2, 3, 4, 5, 6, 7])\n['jumped', 'the', 'quick', 'brown', 'over', 'dog', 'lazy', 'fox']\ntensor([[1, 0, 0, 0, 0, 0, 0, 0],\n        [0, 1, 0, 0, 0, 0, 0, 0],\n        [0, 0, 1, 0, 0, 0, 0, 0],\n        [0, 0, 0, 1, 0, 0, 0, 0],\n        [0, 0, 0, 0, 1, 0, 0, 0],\n        [0, 0, 0, 0, 0, 1, 0, 0],\n        [0, 0, 0, 0, 0, 0, 1, 0],\n        [0, 0, 0, 0, 0, 0, 0, 1]])\n"
+     "text": "tensor([0, 1, 2, 3, 4, 5, 6, 7])\n['lazy', 'the', 'quick', 'jumped', 'brown', 'fox', 'over', 'dog']\ntensor([[1, 0, 0, 0, 0, 0, 0, 0],\n        [0, 1, 0, 0, 0, 0, 0, 0],\n        [0, 0, 1, 0, 0, 0, 0, 0],\n        [0, 0, 0, 1, 0, 0, 0, 0],\n        [0, 0, 0, 0, 1, 0, 0, 0],\n        [0, 0, 0, 0, 0, 1, 0, 0],\n        [0, 0, 0, 0, 0, 0, 1, 0],\n        [0, 0, 0, 0, 0, 0, 0, 1]])\n"
     }
    ],
    "source": [
@@ -155,7 +155,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 438,
+   "execution_count": 188,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -171,7 +171,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 439,
+   "execution_count": 189,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -190,7 +190,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 440,
+   "execution_count": 190,
    "metadata": {
     "tags": []
    },
@@ -198,7 +198,7 @@
     {
      "output_type": "stream",
      "name": "stdout",
-     "text": "[(['tomorrow', 'and'], 'tomorrow'), (['and', 'tomorrow'], 'and'), (['tomorrow', 'and'], 'tomorrow,'), (['and', 'tomorrow,'], 'creeps'), (['tomorrow,', 'creeps'], 'in'), (['creeps', 'in'], 'this')]\n====================================================================================================\n['last', 'petty', 'by', 'in', 'from', 'out,', 'nothing.', 'recorded', 'yesterdays', 'fury,', 'a', 'but', 'no', 'more:', 'sound', 'the', 'pace', 'death.', 'that', 'then', 'dusty', 'brief', 'tale', 'this', 'time,', 'frets', 'signifying', 'his', 'walking', 'hour', 'poor', 'upon', 'is', 'to', 'syllable', 'candle!', 'have', 'heard', 'creeps', 'day', 'lighted', 'it', 'idiot,', \"life's\", 'struts', 'and', 'way', 'fools', 'our', 'stage', 'all', 'shadow,', 'tomorrow,', 'an', 'told', 'player', 'of', 'full', 'tomorrow']\n====================================================================================================\n75\n59\n====================================================================================================\n{'last': 0, 'petty': 1, 'by': 2, 'in': 3, 'from': 4, 'out,': 5, 'nothing.': 6, 'recorded': 7, 'yesterdays': 8, 'fury,': 9, 'a': 10, 'but': 11, 'no': 12, 'more:': 13, 'sound': 14, 'the': 15, 'pace': 16, 'death.': 17, 'that': 18, 'then': 19, 'dusty': 20, 'brief': 21, 'tale': 22, 'this': 23, 'time,': 24, 'frets': 25, 'signifying': 26, 'his': 27, 'walking': 28, 'hour': 29, 'poor': 30, 'upon': 31, 'is': 32, 'to': 33, 'syllable': 34, 'candle!': 35, 'have': 36, 'heard': 37, 'creeps': 38, 'day': 39, 'lighted': 40, 'it': 41, 'idiot,': 42, \"life's\": 43, 'struts': 44, 'and': 45, 'way': 46, 'fools': 47, 'our': 48, 'stage': 49, 'all': 50, 'shadow,': 51, 'tomorrow,': 52, 'an': 53, 'told': 54, 'player': 55, 'of': 56, 'full': 57, 'tomorrow': 58}\n"
+     "text": "[(['tomorrow', 'and'], 'tomorrow'), (['and', 'tomorrow'], 'and'), (['tomorrow', 'and'], 'tomorrow,'), (['and', 'tomorrow,'], 'creeps'), (['tomorrow,', 'creeps'], 'in'), (['creeps', 'in'], 'this')]\n====================================================================================================\n['that', 'an', 'told', 'his', 'our', 'no', 'by', 'to', 'of', 'signifying', 'brief', 'syllable', 'time,', 'fools', 'creeps', 'idiot,', 'walking', 'then', 'fury,', 'tomorrow,', 'out,', 'struts', 'is', 'but', 'poor', 'candle!', 'in', 'tomorrow', 'upon', 'stage', 'the', 'a', 'hour', 'heard', 'tale', 'and', 'recorded', 'full', 'it', 'nothing.', 'shadow,', 'petty', 'yesterdays', 'pace', 'frets', 'way', 'day', 'more:', 'have', 'last', 'lighted', 'death.', 'sound', 'this', 'all', 'player', 'from', \"life's\", 'dusty']\n====================================================================================================\n75\n59\n====================================================================================================\n{'that': 0, 'an': 1, 'told': 2, 'his': 3, 'our': 4, 'no': 5, 'by': 6, 'to': 7, 'of': 8, 'signifying': 9, 'brief': 10, 'syllable': 11, 'time,': 12, 'fools': 13, 'creeps': 14, 'idiot,': 15, 'walking': 16, 'then': 17, 'fury,': 18, 'tomorrow,': 19, 'out,': 20, 'struts': 21, 'is': 22, 'but': 23, 'poor': 24, 'candle!': 25, 'in': 26, 'tomorrow': 27, 'upon': 28, 'stage': 29, 'the': 30, 'a': 31, 'hour': 32, 'heard': 33, 'tale': 34, 'and': 35, 'recorded': 36, 'full': 37, 'it': 38, 'nothing.': 39, 'shadow,': 40, 'petty': 41, 'yesterdays': 42, 'pace': 43, 'frets': 44, 'way': 45, 'day': 46, 'more:': 47, 'have': 48, 'last': 49, 'lighted': 50, 'death.': 51, 'sound': 52, 'this': 53, 'all': 54, 'player': 55, 'from': 56, \"life's\": 57, 'dusty': 58}\n"
     }
    ],
    "source": [
@@ -220,7 +220,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 441,
+   "execution_count": 191,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -233,20 +233,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 442,
+   "execution_count": 192,
    "metadata": {},
    "outputs": [],
    "source": [
     "class NGramLanguageModeler(nn.Module):\n",
     "    \n",
-    "    def __init__(self, vocab_size, embedding_dim, context_size):\n",
+    "    def __init__(self, vocab_size, embedding_dim, context_size):  # 59, 10, 2\n",
     "        super(NGramLanguageModeler, self).__init__()\n",
-    "        self.embedding = nn.Embedding(vocab_size, embedding_dim)\n",
+    "         # vocab_size：嵌入层字典的大小（单词本里单词个数），embedding_dim: 每个产出向量的大小\n",
+    "        self.embedding = nn.Embedding(vocab_size, embedding_dim) \n",
     "        self.linear1 = nn.Linear(context_size * embedding_dim, HIDDEN_DIM)\n",
     "        self.linear2 = nn.Linear(HIDDEN_DIM, vocab_size)\n",
     "\n",
     "    def forward(self, inputs):\n",
-    "        embeds = self.embedding(inputs).view((1, -1))\n",
+    "        \"\"\"因为是根据前两个单词，去预测第三个。input是输入的两个行索引，每行10列，每一行代表一个单词\"\"\"\n",
+    "        embeds = self.embedding(inputs)  # embeds:  torch.Size([2, 10])\n",
+    "        embeds = embeds.view((1, -1))  # embeds:  torch.Size([1, 20])\n",
     "        out = F.relu(self.linear1(embeds))\n",
     "        out = self.linear2(out)\n",
     "        log_probs = F.log_softmax(out, dim=1)\n",
@@ -255,20 +258,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 443,
+   "execution_count": 193,
    "metadata": {},
    "outputs": [],
    "source": [
     "learning_rate = 0.001\n",
     "losses = []\n",
     "loss_function = nn.NLLLoss()  # negative log likehood\n",
-    "model = NGramLanguageModeler(len(vocab2), EMBEDDING_DIM, CONTEXT_SIZE)\n",
+    "model = NGramLanguageModeler(len(vocab2), EMBEDDING_DIM, CONTEXT_SIZE)  # 59, 10, 2\n",
     "optimizer = optim.SGD(model.parameters(), lr=learning_rate)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 444,
+   "execution_count": 194,
    "metadata": {
     "tags": []
    },
@@ -276,7 +279,7 @@
     {
      "output_type": "stream",
      "name": "stderr",
-     "text": "100%|██████████| 73/73 [00:02<00:00, 34.55it/s, loss=4.5]\n100%|██████████| 73/73 [00:02<00:00, 30.08it/s, loss=4.46]\n100%|██████████| 73/73 [00:03<00:00, 22.43it/s, loss=4.42]\n100%|██████████| 73/73 [00:01<00:00, 36.54it/s, loss=4.38]\n100%|██████████| 73/73 [00:02<00:00, 29.75it/s, loss=4.34]\n100%|██████████| 73/73 [00:01<00:00, 53.40it/s, loss=4.3]\n100%|██████████| 73/73 [00:01<00:00, 37.98it/s, loss=4.26]\n100%|██████████| 73/73 [00:02<00:00, 35.78it/s, loss=4.22]\n100%|██████████| 73/73 [00:01<00:00, 46.44it/s, loss=4.18]\n100%|██████████| 73/73 [00:02<00:00, 32.79it/s, loss=4.15]\n100%|██████████| 73/73 [00:02<00:00, 33.60it/s, loss=4.11]\n100%|██████████| 73/73 [00:02<00:00, 32.43it/s, loss=4.07]\n100%|██████████| 73/73 [00:02<00:00, 34.24it/s, loss=4.03]\n100%|██████████| 73/73 [00:01<00:00, 39.31it/s, loss=4]\n100%|██████████| 73/73 [00:01<00:00, 38.18it/s, loss=3.96]\n100%|██████████| 73/73 [00:02<00:00, 30.38it/s, loss=3.92]\n100%|██████████| 73/73 [00:02<00:00, 31.14it/s, loss=3.88]\n100%|██████████| 73/73 [00:01<00:00, 44.24it/s, loss=3.85]\n100%|██████████| 73/73 [00:02<00:00, 25.21it/s, loss=3.81]\n100%|██████████| 73/73 [00:02<00:00, 28.01it/s, loss=3.77]\n100%|██████████| 73/73 [00:02<00:00, 35.40it/s, loss=3.74]\n100%|██████████| 73/73 [00:01<00:00, 46.89it/s, loss=3.7]\n100%|██████████| 73/73 [00:02<00:00, 32.33it/s, loss=3.66]\n100%|██████████| 73/73 [00:03<00:00, 18.38it/s, loss=3.62]\n100%|██████████| 73/73 [00:01<00:00, 41.36it/s, loss=3.59]\n100%|██████████| 73/73 [00:02<00:00, 36.26it/s, loss=3.55]\n100%|██████████| 73/73 [00:01<00:00, 61.19it/s, loss=3.51]\n100%|██████████| 73/73 [00:02<00:00, 31.74it/s, loss=3.48]\n100%|██████████| 73/73 [00:01<00:00, 44.46it/s, loss=3.44]\n100%|██████████| 73/73 [00:02<00:00, 30.99it/s, loss=3.4]\n100%|██████████| 73/73 [00:02<00:00, 25.12it/s, loss=3.37]\n100%|██████████| 73/73 [00:01<00:00, 61.03it/s, loss=3.33]\n100%|██████████| 73/73 [00:02<00:00, 26.92it/s, loss=3.29]\n100%|██████████| 73/73 [00:02<00:00, 34.68it/s, loss=3.26]\n100%|██████████| 73/73 [00:01<00:00, 44.73it/s, loss=3.22]\n100%|██████████| 73/73 [00:00<00:00, 114.59it/s, loss=3.18]\n100%|██████████| 73/73 [00:01<00:00, 40.44it/s, loss=3.15]\n100%|██████████| 73/73 [00:02<00:00, 32.37it/s, loss=3.11]\n100%|██████████| 73/73 [00:02<00:00, 35.80it/s, loss=3.07]\n100%|██████████| 73/73 [00:01<00:00, 38.71it/s, loss=3.04]\n100%|██████████| 73/73 [00:01<00:00, 41.67it/s, loss=3]\n100%|██████████| 73/73 [00:01<00:00, 40.62it/s, loss=2.96]\n100%|██████████| 73/73 [00:02<00:00, 28.98it/s, loss=2.93]\n100%|██████████| 73/73 [00:02<00:00, 31.34it/s, loss=2.89]\n100%|██████████| 73/73 [00:01<00:00, 40.62it/s, loss=2.85]\n100%|██████████| 73/73 [00:03<00:00, 22.31it/s, loss=2.82]\n100%|██████████| 73/73 [00:02<00:00, 25.03it/s, loss=2.78]\n100%|██████████| 73/73 [00:01<00:00, 41.67it/s, loss=2.75]\n100%|██████████| 73/73 [00:03<00:00, 19.40it/s, loss=2.71]\n100%|██████████| 73/73 [00:03<00:00, 20.73it/s, loss=2.67]\n"
+     "text": "100%|██████████| 73/73 [00:01<00:00, 55.12it/s, loss=4.36]\n100%|██████████| 73/73 [00:01<00:00, 43.03it/s, loss=4.32]\n100%|██████████| 73/73 [00:00<00:00, 73.05it/s, loss=4.28]\n100%|██████████| 73/73 [00:00<00:00, 107.01it/s, loss=4.24]\n100%|██████████| 73/73 [00:00<00:00, 144.08it/s, loss=4.21]\n100%|██████████| 73/73 [00:00<00:00, 170.22it/s, loss=4.17]\n100%|██████████| 73/73 [00:00<00:00, 140.76it/s, loss=4.13]\n100%|██████████| 73/73 [00:00<00:00, 142.40it/s, loss=4.1]\n100%|██████████| 73/73 [00:00<00:00, 161.22it/s, loss=4.06]\n100%|██████████| 73/73 [00:00<00:00, 132.12it/s, loss=4.03]\n100%|██████████| 73/73 [00:00<00:00, 123.63it/s, loss=3.99]\n100%|██████████| 73/73 [00:05<00:00, 13.89it/s, loss=3.95]\n100%|██████████| 73/73 [00:01<00:00, 52.43it/s, loss=3.92]\n100%|██████████| 73/73 [00:01<00:00, 65.12it/s, loss=3.88]\n100%|██████████| 73/73 [00:02<00:00, 33.55it/s, loss=3.85]\n100%|██████████| 73/73 [00:01<00:00, 71.55it/s, loss=3.81]\n100%|██████████| 73/73 [00:01<00:00, 58.79it/s, loss=3.78]\n100%|██████████| 73/73 [00:01<00:00, 46.27it/s, loss=3.75]\n100%|██████████| 73/73 [00:01<00:00, 47.81it/s, loss=3.71]\n100%|██████████| 73/73 [00:01<00:00, 52.66it/s, loss=3.68]\n100%|██████████| 73/73 [00:00<00:00, 138.89it/s, loss=3.64]\n100%|██████████| 73/73 [00:00<00:00, 112.26it/s, loss=3.61]\n100%|██████████| 73/73 [00:00<00:00, 126.64it/s, loss=3.57]\n100%|██████████| 73/73 [00:00<00:00, 122.00it/s, loss=3.54]\n100%|██████████| 73/73 [00:00<00:00, 138.63it/s, loss=3.51]\n100%|██████████| 73/73 [00:00<00:00, 130.24it/s, loss=3.47]\n100%|██████████| 73/73 [00:00<00:00, 149.38it/s, loss=3.44]\n100%|██████████| 73/73 [00:00<00:00, 138.10it/s, loss=3.4]\n100%|██████████| 73/73 [00:00<00:00, 138.89it/s, loss=3.37]\n100%|██████████| 73/73 [00:00<00:00, 130.47it/s, loss=3.34]\n100%|██████████| 73/73 [00:00<00:00, 141.58it/s, loss=3.3]\n100%|██████████| 73/73 [00:00<00:00, 132.12it/s, loss=3.27]\n100%|██████████| 73/73 [00:00<00:00, 124.27it/s, loss=3.24]\n100%|██████████| 73/73 [00:00<00:00, 154.10it/s, loss=3.2]\n100%|██████████| 73/73 [00:00<00:00, 138.63it/s, loss=3.17]\n100%|██████████| 73/73 [00:00<00:00, 154.74it/s, loss=3.14]\n100%|██████████| 73/73 [00:00<00:00, 117.11it/s, loss=3.1]\n100%|██████████| 73/73 [00:00<00:00, 114.55it/s, loss=3.07]\n100%|██████████| 73/73 [00:00<00:00, 171.02it/s, loss=3.04]\n100%|██████████| 73/73 [00:00<00:00, 176.79it/s, loss=3]\n100%|██████████| 73/73 [00:00<00:00, 171.82it/s, loss=2.97]\n100%|██████████| 73/73 [00:00<00:00, 131.17it/s, loss=2.94]\n100%|██████████| 73/73 [00:00<00:00, 128.41it/s, loss=2.9]\n100%|██████████| 73/73 [00:00<00:00, 160.53it/s, loss=2.87]\n100%|██████████| 73/73 [00:00<00:00, 130.94it/s, loss=2.84]\n100%|██████████| 73/73 [00:00<00:00, 149.38it/s, loss=2.81]\n100%|██████████| 73/73 [00:00<00:00, 144.09it/s, loss=2.77]\n100%|██████████| 73/73 [00:00<00:00, 159.13it/s, loss=2.74]\n100%|██████████| 73/73 [00:00<00:00, 137.06it/s, loss=2.71]\n100%|██████████| 73/73 [00:00<00:00, 176.37it/s, loss=2.68]\n"
     }
    ],
    "source": [
@@ -293,10 +296,11 @@
     "        model.zero_grad()\n",
     "\n",
     "        # Step 3. Run the forward pass,getting log probabilities over next words\n",
-    "        log_probs = model(context_idxs)\n",
-    "\n",
+    "        log_probs = model(context_idxs)  # torch.Size([1, 59])\n",
+    "        \n",
     "        # Step 4. Compute your loss function. (Again,Torch wants the target word wrapped in a tensor)\n",
     "        loss = loss_function(log_probs, torch.tensor([word_to_ix2[target]], dtype=torch.long))\n",
+    "\n",
     "        # Step 5. Do the backward pass and update the gradient\n",
     "        loss.backward() \n",
     "        optimizer.step()\n",
@@ -310,7 +314,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 445,
+   "execution_count": 195,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -320,7 +324,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 446,
+   "execution_count": 197,
    "metadata": {
     "tags": []
    },
@@ -328,28 +332,19 @@
     {
      "output_type": "stream",
      "name": "stdout",
-     "text": "tensor([[-4.4783, -4.4191, -3.7023, -5.1273, -4.2793, -4.2370, -4.6083, -3.9433,\n         -4.2768, -4.4262, -2.8790, -3.8211, -4.4354, -3.7915, -4.1032, -3.1344,\n         -4.4880, -4.8107, -4.3386, -5.1267, -4.4028, -4.3076, -4.0304, -2.6152,\n         -4.3099, -4.5722, -4.1308, -4.7391, -4.6606, -3.9616, -4.4295, -4.6521,\n         -4.1112, -3.6293, -4.5858, -4.3190, -4.6619, -5.0203, -4.2950, -4.3610,\n         -4.1950, -4.5477, -4.9065, -4.2715, -4.2793, -2.9366, -4.3579, -4.1131,\n         -4.5759, -4.4559, -4.4987, -4.1404, -4.7564, -4.8629, -4.3767, -3.7872,\n         -2.7306, -4.6732, -4.6658]])\ntorch.FloatTensor\nthis\n"
+     "text": "tomorrow,\n"
     }
    ],
    "source": [
     "import numpy\n",
     "\n",
     "with torch.no_grad():\n",
-    "    context = ['creeps', 'in']\n",
-    "    context_idxs = torch.tensor([word_to_ix2[w] for w in context], dtype=torch.long)\n",
-    "    pred = model(context_idxs)\n",
-    "    print(pred)\n",
-    "    print(pred.type())\n",
+    "    context3 = ['tomorrow', 'and']\n",
+    "    context_idxs3 = torch.tensor([word_to_ix2[w] for w in context3], dtype=torch.long)\n",
+    "    pred = model(context_idxs3)  # torch.Size([1, 59])\n",
     "    index_of_prediction = numpy.argmax(pred)\n",
     "    print(vocab2[index_of_prediction])"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
@@ -367,7 +362,7 @@
   },
   "orig_nbformat": 2,
   "kernelspec": {
-   "name": "python_defaultSpec_1594105731385",
+   "name": "python_defaultSpec_1594125444456",
    "display_name": "Python 3.7.4 64-bit"
   }
  },
