--- a/Project1/charater_testRNN.ipynb
+++ b/Project1/charater_testRNN.ipynb
@@ -22,11 +22,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
-    "import torch"
+    "import torch\n",
+    "from torch.nn.functional import one_hot"
    ]
   },
   {
@@ -59,10 +60,18 @@
     "idx2char = ['e', 'h', 'l', 'o']\n",
     "x_data = [1, 0, 2, 2, 3]  # The input sequence is 'hello'\n",
     "y_data = [3, 1, 2, 3, 2]  # The output sequence is 'ohlol'\n",
+    "\n",
+    "# one-hot encoding\n",
+    "# pattern 1. \n",
     "one_hot_lookup = [[1, 0, 0, 0],\n",
     "                  [0, 1, 0, 0],\n",
     "                  [0, 0, 1, 0],\n",
     "                  [0, 0, 0, 1]]\n",
+    "# pattern 2. \n",
+    "# words = torch.tensor([0, 1, 2, 3], dtype=torch.long)\n",
+    "# one_hot_encoding = one_hot(words)\n",
+    "# print(one_hot_encoding)\n",
+    "\n",
     "# Convert indices into one-hot vector\n",
     "x_one_hot = [one_hot_lookup[x] for x in x_data]  # [seqLen, input_size]\n",
     "# Reshape the inputs to (seqLen, batch_size, input_size) \n",
@@ -302,7 +311,7 @@
   },
   "orig_nbformat": 2,
   "kernelspec": {
-   "name": "python_defaultSpec_1594091348541",
+   "name": "python_defaultSpec_1594168209891",
    "display_name": "Python 3.7.4 64-bit"
   }
  },
