注释补充说明

--- a/Project1/EmbeddingLayers.ipynb
+++ b/Project1/EmbeddingLayers.ipynb
@@ -247,7 +247,10 @@
     "        self.linear2 = nn.Linear(HIDDEN_DIM, vocab_size)\n",
     "\n",
     "    def forward(self, inputs):\n",
-    "        \"\"\"因为是根据前两个单词，去预测第三个。input是输入的两个行索引，每行10列，每一行代表一个单词\"\"\"\n",
+    "\n",
+    "        \"\"\"因为是根据前两个单词，去预测第三个。input是输入的两个行索引，每行10列，每一行代表一个单词，其中\n",
+    "        Embedding是初始化好的矩阵，行数为单词本里单词个数，列数为embedding_dim。输入索引，取出两行 10 维向量，当做网          络的输入数据去训练、去反向传播\"\"\"\n",
+    "\n",
     "        embeds = self.embedding(inputs)  # embeds:  torch.Size([2, 10])\n",
     "        embeds = embeds.view((1, -1))  # embeds:  torch.Size([1, 20])\n",
     "        out = F.relu(self.linear1(embeds))\n",
@@ -299,6 +302,8 @@
     "        log_probs = model(context_idxs)  # torch.Size([1, 59])\n",
     "        \n",
     "        # Step 4. Compute your loss function. (Again,Torch wants the target word wrapped in a tensor)\n",
+    "        # log_probs是torch.Size([1, 59]), 而torch.tensor([word_to_ix2[target]], dtype=torch.long) 是一个具体的LongTensor型数字，它会被自动转换为one-hot进行训练\n",
+    "        \n",
     "        loss = loss_function(log_probs, torch.tensor([word_to_ix2[target]], dtype=torch.long))\n",
     "\n",
     "        # Step 5. Do the backward pass and update the gradient\n",
