--- a/Project1/EmbeddingLayers.ipynb
+++ b/Project1/EmbeddingLayers.ipynb
@@ -248,8 +248,7 @@
     "\n",
     "    def forward(self, inputs):\n",
     "\n",
-    "        \"\"\"因为是根据前两个单词，去预测第三个。input是输入的两个行索引，每行10列，每一行代表一个单词，其中\n",
-    "        Embedding是初始化好的矩阵，行数为单词本里单词个数，列数为embedding_dim。输入索引，取出两行 10 维向量，当做网          络的输入数据去训练、去反向传播\"\"\"\n",
+    "        \"\"\"因为是根据前两个单词，去预测第三个。input是输入的两个行索引，每行10列，每一行代表一个单词，其中Embedding是初始化好的矩阵，行数为单词本里单词个数，列数为embedding_dim。输入索引，取出两行 10 维向量，当做网络的输入数据去训练、去反向传播\"\"\"\n",
     "\n",
     "        embeds = self.embedding(inputs)  # embeds:  torch.Size([2, 10])\n",
     "        embeds = embeds.view((1, -1))  # embeds:  torch.Size([1, 20])\n",
