--- a/Project1/charater_testRNN.ipynb
+++ b/Project1/charater_testRNN.ipynb
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -40,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -51,7 +51,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 15,
    "metadata": {
     "tags": []
    },
@@ -88,7 +88,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -110,11 +110,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
-    "net = Model(input_size, hidden_size, batch_size)\n",
+    "net = Model(input_size, hidden_size, batch_size)  # 4, 4, 1\n",
     "criterion = torch.nn.CrossEntropyLoss()\n",
     "optimizer = torch.optim.Adam(net.parameters(), lr=0.1)"
    ]
@@ -128,7 +128,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 18,
    "metadata": {
     "tags": []
    },
@@ -136,7 +136,7 @@
     {
      "output_type": "stream",
      "name": "stdout",
-     "text": "======================== 0 ========================\nPredicted string: ellll, Epocn [1 / 15] loss=6.7245\n======================== 1 ========================\nPredicted string: ellll, Epocn [2 / 15] loss=5.8842\n======================== 2 ========================\nPredicted string: oolll, Epocn [3 / 15] loss=5.2503\n======================== 3 ========================\nPredicted string: oholl, Epocn [4 / 15] loss=4.8773\n======================== 4 ========================\nPredicted string: oholl, Epocn [5 / 15] loss=4.5178\n======================== 5 ========================\nPredicted string: ohlll, Epocn [6 / 15] loss=4.2397\n======================== 6 ========================\nPredicted string: ohlol, Epocn [7 / 15] loss=3.9508\n======================== 7 ========================\nPredicted string: ohlol, Epocn [8 / 15] loss=3.6986\n======================== 8 ========================\nPredicted string: ohlol, Epocn [9 / 15] loss=3.5046\n======================== 9 ========================\nPredicted string: ohlol, Epocn [10 / 15] loss=3.3255\n======================== 10 ========================\nPredicted string: ohlol, Epocn [11 / 15] loss=3.1152\n======================== 11 ========================\nPredicted string: ohlol, Epocn [12 / 15] loss=2.8638\n======================== 12 ========================\nPredicted string: ohlol, Epocn [13 / 15] loss=2.6206\n======================== 13 ========================\nPredicted string: ohlol, Epocn [14 / 15] loss=2.4316\n======================== 14 ========================\nPredicted string: ohlol, Epocn [15 / 15] loss=2.2891\n"
+     "text": "======================== 0 ========================\nPredicted string: ollll, Epocn [1 / 15] loss=5.4837\n======================== 1 ========================\nPredicted string: ollll, Epocn [2 / 15] loss=4.9311\n======================== 2 ========================\nPredicted string: ollll, Epocn [3 / 15] loss=4.4451\n======================== 3 ========================\nPredicted string: ohlll, Epocn [4 / 15] loss=3.9837\n======================== 4 ========================\nPredicted string: ohlol, Epocn [5 / 15] loss=3.6430\n======================== 5 ========================\nPredicted string: ohlol, Epocn [6 / 15] loss=3.4190\n======================== 6 ========================\nPredicted string: ohlol, Epocn [7 / 15] loss=3.1067\n======================== 7 ========================\nPredicted string: ohlol, Epocn [8 / 15] loss=2.8451\n======================== 8 ========================\nPredicted string: ohlol, Epocn [9 / 15] loss=2.6792\n======================== 9 ========================\nPredicted string: ohlol, Epocn [10 / 15] loss=2.5638\n======================== 10 ========================\nPredicted string: ohlol, Epocn [11 / 15] loss=2.4677\n======================== 11 ========================\nPredicted string: ohlol, Epocn [12 / 15] loss=2.3780\n======================== 12 ========================\nPredicted string: ohlol, Epocn [13 / 15] loss=2.2892\n======================== 13 ========================\nPredicted string: ohlol, Epocn [14 / 15] loss=2.2024\n======================== 14 ========================\nPredicted string: ohlol, Epocn [15 / 15] loss=2.1249\n"
     }
    ],
    "source": [
@@ -152,7 +152,8 @@
     "    # shape of input :(batch_size, input_size)\n",
     "    # shape of labels:(seqLen, 1)\n",
     "    # shape of label :(1)\n",
-    "    for input, label in zip(inputs, labels):  \n",
+    "    for input, label in zip(inputs, labels): \n",
+    "        # 通过不断地 for 循环，使这次的 hidden 结果，输入到下次。 \n",
     "        hidden = net(input, hidden)\n",
     "        # 不要用loss.item()，因为一个循环只求出了一个seq的损失，要把所有seq的损失和加起来构造计算图，如上方最后一张图所示，所有seq的损失的和，才是最终的损失。\n",
     "        loss += criterion(hidden, label)  \n",
@@ -172,7 +173,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -188,7 +189,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -201,7 +202,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -228,7 +229,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -251,7 +252,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -269,7 +270,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 24,
    "metadata": {
     "tags": []
    },
@@ -277,7 +278,7 @@
     {
      "output_type": "stream",
      "name": "stdout",
-     "text": "Predicted:  hoooo, Epocn [1 / 15] loss=1.584\nPredicted:  ooooo, Epocn [2 / 15] loss=1.464\nPredicted:  ooooo, Epocn [3 / 15] loss=1.366\nPredicted:  ooooo, Epocn [4 / 15] loss=1.286\nPredicted:  ooooo, Epocn [5 / 15] loss=1.224\nPredicted:  ooooo, Epocn [6 / 15] loss=1.165\nPredicted: ooooo, Epocn [7 / 15] loss=1.098\nPredicted:  ooooo, Epocn [8 / 15] loss=1.025\nPredicted:  ooooo, Epocn [9 / 15] loss=0.951\nPredicted:  ohloo, Epocn [10 / 15] loss=0.883\nPredicted:  ohloo, Epocn [11 / 15] loss=0.826\nPredicted:  ohlol, Epocn [12 / 15] loss=0.780\nPredicted:  ohlol, Epocn [13 / 15] loss=0.740\nPredicted:  ohlol, Epocn [14 / 15] loss=0.702\nPredicted:  ohlol, Epocn [15 / 15] loss=0.665\n"
+     "text": "Predicted:  lllle, Epocn [1 / 15] loss=1.643\nPredicted:  lllle, Epocn [2 / 15] loss=1.489\nPredicted:  lllll, Epocn [3 / 15] loss=1.371\nPredicted:  lllll, Epocn [4 / 15] loss=1.262\nPredicted:  hllll, Epocn [5 / 15] loss=1.154\nPredicted:  hhlll, Epocn [6 / 15] loss=1.059\nPredicted:  hhlll, Epocn [7 / 15] loss=0.983\nPredicted:  hhlll, Epocn [8 / 15] loss=0.925\nPredicted:  hhlll, Epocn [9 / 15] loss=0.879\nPredicted:  hhlll, Epocn [10 / 15] loss=0.839\nPredicted:  ohlll, Epocn [11 / 15] loss=0.805\nPredicted:  ohlll, Epocn [12 / 15] loss=0.777\nPredicted:  ohlll, Epocn [13 / 15] loss=0.752\nPredicted:  ohlll, Epocn [14 / 15] loss=0.729\nPredicted:  ohlll, Epocn [15 / 15] loss=0.709\n"
     }
    ],
    "source": [
@@ -311,7 +312,7 @@
   },
   "orig_nbformat": 2,
   "kernelspec": {
-   "name": "python_defaultSpec_1594168209891",
+   "name": "python_defaultSpec_1594191035317",
    "display_name": "Python 3.7.4 64-bit"
   }
  },
