补充图片，说明本网络的目的

--- a/Project1/EmbeddingRNN.ipynb
+++ b/Project1/EmbeddingRNN.ipynb
@@ -5,6 +5,11 @@
    "metadata": {},
    "source": [
     "# RNN--Embedding and Linear Layer\n",
+    "- 目标\n",
+    "\n",
+    "![目标](https://cdn.jsdelivr.net/gh/Jason-L-Yan/imgBed/img/image-20200706212357924.png)\n",
+    "- 网络总体框架\n",
+    "\n",
     "![image-20200708111028028](https://cdn.jsdelivr.net/gh/Jason-L-Yan/imgBed/img/image-20200708111028028.png)"
    ]
   },
